# lighthouse

./: .gitignore  README.md  makefile  package-lock.json  package.json
.github/workflows/: main.yml  update-dependencies.yml
crawler/extension/: borderify.js
crawling/queue-trafficlight/: Cargo.toml  Dockerfile  README.md
crawling/queue-trafficlight/example/config/: basic.toml
crawling/queue-trafficlight/sql/table/: traffic-light.sql
crawling/queue-trafficlight/src/: database.rs  diesel_mysql.rs  global.rs  main.rs  responses.rs  security.rs  structs.rs  tables.rs
crawling/queue-trafficlight/src/endpoint/: job.rs  runner.rs
crawling/queue-trafficlight/src/globals/: environment_variables.rs
crawling/queue-trafficlight/src/misc/: cursor.rs  job.rs  missing_range.rs  runner.rs
docs/: setup.md
example/: cmd.md  coastguard-dev-config.toml  guard-dev-config.toml  lighthouse-dev-config.toml
example/faulty-typescript-test/: package-lock.json  package.json
example/tests/: cool.yaml  req.bash  req.yaml
frontend/admin/: package-lock.json  package.json
frontend/lighthouse/: .env.local  CLAUDE.md  next.config.js  package-lock.json  package.json
frontend/styles/: home.css  query.css
libraries/npm/: package-lock.json  package.json  tsconfig.json
make/scripts/: dev.sh  setup-guard-dev.sh  setup-nginx.sh
note/elasticsearch/: lighthouse-index-jobs.txt  lighthouse-index.txt
server/: Cargo.toml  Dockerfile  Rocket.toml  start-webservers.sh
server/frontend/: package.json
server/src/: database.rs  diesel_mysql.rs  global.rs  guard.rs  main.rs  proxy.rs  (+5 more)
(+225 files in other folders)
