[package]
name = "traffic-light"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rand = "0.8.5"
serde = "1.0.196"
serde_json = "1.0.117"
hades-auth = { git = "https://gitlab.com/oracularhades/hades-auth.git", branch = "main", subdir = "rust" }
url = "2.5.0"
hex-literal = "0.4.1"
lettre = "0.11.7"
regex = "1.10.5"
once_cell = "1.19.0"
toml = "0.8.14"
diesel = { version = "2.2.3", features = ["mysql", "r2d2"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio = "1.40.0"
futures-util = "0.3.30"
elasticsearch = "8.17.0-alpha.1"
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
sha2 = "0.10.8"
hex = "0.4.3"
log = "0.4.27"
env_logger = "0.11.8"
reqwest = "0.12.15"
chrono = "0.4.41"
